# forofuse

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run_app.py  test_qdrant.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/api/: image_routes.py  main.py  user_routes.py
backend/models/: image.py  user.py
backend/services/: image_recommendation.py  unified_search.py  user_matching.py
data/: users.json
frontend/pages/: image_recommendation.py  product_search.py  user_matching.py
