[project]
name = "forofuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.20",
    "qdrant-client[fastembed]>=1.13.3",
    "streamlit>=1.43.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
